@@ -273,6 +273,11 @@ proc gdbserver_start { options arguments } {
 	global server_spawn_id
 	set server_spawn_id [remote_spawn target $gdbserver_command]
 
+	# GDBserver doesn't do inferior I/O through GDB.  But we can
+	# talk to the program using GDBserver's tty instead.
+	global inferior_spawn_id
+	set inferior_spawn_id $server_spawn_id
+
 	# Wait for the server to open its TCP socket, so that GDB can connect.
 	expect {
 	    -i $server_spawn_id
@@ -319,7 +324,7 @@ proc gdbserver_spawn { child_args } {
 # Close the GDBserver connection.
 
 proc close_gdbserver {} {
-    global server_spawn_id
+    global server_spawn_id inferior_spawn_id
 
     # We can't just call close, because if gdbserver is local then that means
     # that it will get a SIGHUP.  Doing it this way could also allow us to
@@ -335,6 +340,7 @@ proc close_gdbserver {} {
     catch "close -i $server_spawn_id"
     catch "wait -i $server_spawn_id"
     unset server_spawn_id
+    unset inferior_spawn_id
 }
 
 # Hook into GDB exit, and close GDBserver.
@@ -343,7 +349,7 @@ if { [info procs gdbserver_gdb_exit] == "" } {
     rename gdb_exit gdbserver_orig_gdb_exit
 }
 proc gdb_exit {} {
-    global gdb_spawn_id server_spawn_id
+    global gdb_spawn_id server_spawn_id inferior_spawn_id
     global gdb_prompt
 
     if {[info exists gdb_spawn_id] && [info exists server_spawn_id]} {
@@ -355,6 +361,7 @@ proc gdb_exit {} {
 	    -i "$server_spawn_id" eof {
 		wait -i $expect_out(spawn_id)
 		unset server_spawn_id
+		unset inferior_spawn_id
 	    }
 	}
     }
